<resources>
    <string name="app_name">Link Shortener</string>
    <string name="google_API_KEY">AIzaSyCc1i6J2DwNqinDnJlr2AXnKlNJrLrgqkY</string>
    <string name="sign_in">Sign In</string>
    <string name="shorten_your_links_with_google">Shorten your links with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="shorten_link_without_account">Shorten Link Without Account</string>
    <string name="this_is_not_an_official_google_app">This is not an official Google App</string>
    <string name="your_original_url_here">Your original URL here</string>
    <string name="original_link">Original Link</string>
    <string name="shortened_link">Shortened Link</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="home">Home</string>
    <string name="total_links_shortened">Total Links Shortened</string>
    <string name="total_clicks">Total Clicks</string>
    <string name="view_complete_stats">View Complete Stats</string>
    <string name="shortened_links">Shortened Links</string>
    <string name="link">Link</string>
    <string name="view_all_links">View all links</string>
    <string name="all_links">All Links</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="platforms">Platforms</string>
    <string name="browsers">Browsers</string>
    <string name="referrers">Referrers</string>
    <string name="country">Country</string>
    <string name="permission_required">Permission Required</string>
</resources>
