<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0dp"
    app:cardElevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_link"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/original_link_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/original_link"
                android:textColor="@color/md_blue_500"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shortened_link"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/shortened_link_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Short Link"
                android:textColor="@color/md_blue_500"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_clicks"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/total_clicks_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="32"
                android:textColor="@color/md_blue_500"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/copy_link_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_copy"
                android:tint="@android:color/black" />

            <ImageView
                android:id="@+id/share_link_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="24dp"
                android:layout_toRightOf="@id/copy_link_image_view"
                android:src="@drawable/ic_share"
                android:tint="@android:color/black" />

            <ImageView
                android:id="@+id/open_details_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_arrow_right_grey"
                android:tint="@android:color/black" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>