<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_link_without_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context="app.com.thetechnocafe.linkshortner.LinkWithoutAccount.LinkWithoutAccountActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            app:cardCornerRadius="0dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_link_short_edit_text"
                android:orientation="horizontal"
                android:padding="16dp">

                <EditText
                    android:id="@+id/link_edit_text"
                    style="@style/LinkEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.92"
                    android:hint="@string/your_original_url_here"
                    android:paddingLeft="16dp" />

                <ImageButton
                    android:id="@+id/shorten_link_image_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.08"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_arrow_right_grey" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.08"
                    android:visibility="gone" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/link_details_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:visibility="gone"
            app:cardCornerRadius="0dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_link"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/original_link_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/original_link"
                    android:textColor="@color/md_blue_500"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/shortened_link"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/shortened_link_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/original_link"
                    android:textColor="@color/md_blue_500"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="24dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/copy_link_image_view"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_copy"
                        android:tint="@android:color/black" />

                    <ImageView
                        android:id="@+id/share_link_image_view"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginLeft="24dp"
                        android:src="@drawable/ic_share"
                        android:tint="@android:color/black" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
